# move_obstacle

./: README.md
Collision_Avoidance/ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module/src/: base_module.cpp
Collision_Avoidance/ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_manager/launch/: train_dual_arm.launch
Collision_Avoidance/d435/launch/: d435.launch
Collision_Avoidance/d435/tools/: d435.gazebo.xacro  d435.urdf.xacro  test_d435_camera.gazebo.xacro  test_d435_camera.urdf.xacro
Collision_Avoidance/strategy/src/: object_pos.py
Collision_Avoidance/train/: CMakeLists.txt
Collision_Avoidance/train/src/: CheckCollision_v1.py  DNN_v2.py  SAC_run_v10.py  SAC_run_v11.py  SAC_run_v12.py  SAC_run_v13.py  SAC_run_v7.py  SAC_run_v8.py  SAC_run_v9.py  env_v22.py  env_v23.py  env_v24.py  env_v25.py  env_v26.py  env_v27.py  fuckkkkkkkkk.py  sac_v14.py  sac_v15.py  sac_v16.py  sac_v17.py  sac_v18.py  sac_v19.py  sac_v20.py  test_obstacle_env.py  test_obstacle_run.py  test_obstacle_sac.py  tttttttt.py
Collision_Avoidance/wrs_gazebo/mobile_dual_arm/: CMakeLists.txt
Collision_Avoidance/wrs_gazebo/mobile_dual_arm/launch/: mobile_dual_arm.launch
Collision_Avoidance/wrs_gazebo/mobile_dual_arm/urdf/: mobile_dual_arm.xacro
Collision_Avoidance/wrs_gazebo/mobile_dual_arm/worlds/: mobile_dual_arm.world
Collision_Avoidance/wrs_gazebo/mobile_table/: CMakeLists.txt  package.xml
Collision_Avoidance/wrs_gazebo/single_arm/single_arm_description/urdf/: single_arm.xacro
Collision_Avoidance/wrs_gazebo/suction_urdf/urdf/: suction_urdf.xacro
rs_d435i/get_rs_image/scripts/get_rs_image/: Get_Image.py
rs_d435i/test_rs_img/scripts/: get_rs_module_img.py
